kubernetes/monitoring/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        tier: management
        component: monitoring
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:13.2.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-persistent-storage
              mountPath: /var/lib/grafana
          securityContext:
            runAsUser: 0
          livenessProbe:
            tcpSocket:
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
      volumes:
        - name: grafana-persistent-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
