kubernetes/monitoring/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  rules:
    - host: grafana.minikube
      http:
        paths:
          - path:
            backend:
              serviceName: grafana
              servicePort: 3000
